# CodeTrap-Agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  main.py  models.py  repositories.py  schemas.py
app/api/: judge.py  problems.py  reports.py
app/static/: index.html
app/templates/: report.html
codetrap/core/: errors.py  judge_result.py  problem.py  problem_bundle.py  registry.py  testcase.py
codetrap/families/dp_counting/: generator.py  metadata.py  mutants.py
codetrap/families/graph_paths/: generator.py  metadata.py  mutants.py
codetrap/families/interval_merge/: generator.py  metadata.py  mutants.py
codetrap/judge/: analyzer.py  checker.py  runner.py  sandbox.py  sandbox_worker.py
codetrap/llm/: client.py  prompt.py
codetrap/reports/: html_report.py  markdown_report.py
codetrap/search/: web_search.py
codetrap/utils/: hashing.py  json_utils.py  timing.py
data/: codetrap.sqlite3
data/uploads/: f467a709742747fb871f94c07f119547_correct_solution.py
examples/: wrong_solution_dp.py  wrong_solution_graph.py  wrong_solution_interval.py  wrong_solution_json_patch.py  wrong_solution_parser.py
src/codetrap_agent/: __init__.py  __main__.py  cli.py  config.py  constants.py  generator.py  mock_data.py  model_client.py  paths.py  prompting.py  schemas.py  storage.py  web_app.py
tests/: test_cli.py  test_families.py  test_generation.py  test_judge_runner.py  test_registry.py  test_reports_api.py  test_search.py  test_web_security.py
(+9 files in other folders)
