[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codetrap-agent"
version = "0.1.0"
description = "AI-assisted adversarial programming problem generator"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
  "fastapi>=0.111",
  "jinja2>=3.1",
  "python-multipart>=0.0.9",
  "typer>=0.12",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
  "ruff>=0.5",
]

[project.scripts]
codetrap-agent = "codetrap_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codetrap_agent = ["templates/**/*.html", "static/*.css"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
